<resources>
    <string name="app_name">Kequi</string>

    //MainActivity
    <string name="empty"></string>
    <string name="upToBancolombia">from</string>

    //LoginActivity
    <string name="textLogin">Login</string>
    <string name="buttonAccept">Entry</string>
    <string name="buttonAccount">or create new account</string>

    //RegisterActivity
    <string name="textRegister">Register</string>
    <string name="textEnunciado1">Fill out the fields and register</string>
    <string name="editName">Name</string>
    <string name="editLastname">Last name</string>
    <string name="textEnunciado2">entry your credentials</string>
    <string name="editEmail">Email</string>
    <string name="editPassword">Password</string>
    <string name="editConfirmPassword">Confirm password</string>
    <string name="textEnunciado3">type your number phone</string>
    <string name="editNumberDocument">Phone</string>
    <string name="buttonValidate">Validate</string>

    //LobbyActivity
    <string name="options">Options</string>
    <string name="signOff">Sign off</string>
    <string name="changeMoney">Change currency</string>
    <string name="textWelcome">Welcome sr.</string>
    <string name="textBalance">Your balance</string>
    <string name="textNumberBalance">---.---</string>

    //change money
    <string name="moneyPeso">Peso $</string>
    <string name="moneyEuro">Euro €</string>
    <string name="moneyYen">Yen ¥</string>

    //TransferActivity
    <string name="textStatement">Send</string>
    <string name="editNumberPhone">Number phone to send</string>
    <string name="editCash">Amount of cash</string>
    <string name="editMessage">Write your message</string>
    <string name="buttonSend">send cash</string>

</resources>