<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="@color/background"
    tools:context=".RegisterActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-350dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_background_register" />

    <TextView
        android:id="@+id/textPostBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/figura_cuadrado_transparente"
        android:backgroundTint="#20BB8FCE"
        android:text="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEnunciado1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/andika"
                android:text="@string/textEnunciado1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFrom"
                android:ems="10"
                android:hint="@string/editName"
                android:inputType="text"
                android:textColorHint="@color/colorT2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFrom"
                android:ems="10"
                android:hint="@string/editLastname"
                android:inputType="text"
                android:textColorHint="@color/colorT2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEnunciado2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/textEnunciado2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/editEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/editPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFrom"
                android:ems="10"
                android:hint="@string/editConfirmPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/colorT2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEmpty2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEnunciado3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/textEnunciado3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorFrom"
                android:ems="10"
                android:hint="@string/editNumberDocument"
                android:inputType="number"
                android:textColorHint="@color/colorT2"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="600dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textRegister"
        android:textAlignment="center"
        android:textColor="@color/colorT4"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textPostBackground"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/buttonValidate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:backgroundTint="@color/rojoBackground"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/buttonValidate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textPostBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="345dp"
        android:background="@drawable/icon_atras"
        android:backgroundTint="@color/rojoBackground"
        android:contentDescription="back"
        android:onClick="goToBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>