<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="@color/background"
    tools:context=".LobbyActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-350dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_background_register" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="242dp"
        android:layout_height="281dp"
        android:layout_marginStart="-40dp"
        android:layout_marginBottom="-75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_money_lobby" />

    <TextView
        android:id="@+id/rojoLg"
        android:layout_width="338dp"
        android:layout_height="306dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-80dp"
        android:alpha="1"
        android:background="@drawable/figura_cuadrado_transparente"
        android:backgroundTint="@color/rojoBackground"
        android:rotation="405"
        android:text="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/azulLg"
        android:layout_width="334dp"
        android:layout_height="312dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-80dp"
        android:alpha="1"
        android:background="@drawable/figura_cuadrado_transparente"
        android:backgroundTint="@color/azulBackground"
        android:rotation="200"
        android:text="@string/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/textWelcome"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/textBalance"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <TextView
        android:id="@+id/textNumberBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/textNumberBalance"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="170dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEnunciado2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/textEnunciado2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textEmpty2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textEnunciado3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/textEnunciado3"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/buttonOptions"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:alpha="1"
        android:background="@drawable/icon_options"
        android:backgroundTint="@color/rojoBackground"
        android:contentDescription="@string/options"
        android:onClick="options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/background"
        android:contentDescription="touchOutside"
        android:onClick="touchBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LayoutOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="250dp"
        android:alpha="0"
        android:background="@drawable/background"
        android:backgroundTint="#80BB8FCE"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/options"
                android:textAlignment="center"
                android:textColor="@color/colorT4"
                android:textSize="34sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="560dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSignOff"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/background"
                android:backgroundTint="@color/rojo"
                android:fontFamily="@font/andika"
                android:onClick="signOff"
                android:text="@string/signOff"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorT1"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>